--- a/coffeewebsitetemplate/templates/about.html
+++ b/coffeewebsitetemplate/templates/about.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About - Coffee Website Template</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 	<div id="page">
 		<div>
 			<div id="header">
-				<a href="index.html"><img src="images/logo.png" alt="Image"></a>
+				<a href="index.html"><img src="../static/images/logo.png" alt="Image"></a>
 				<ul>
 					<li>
 						<a href="index.html">Home</a>
@@ -31,7 +31,7 @@
 			</div>
 			<div id="body">
 				<div id="figure">
-					<img src="images/headline-about.jpg" alt="Image">
+					<img src="../static/images/headline-about.jpg" alt="Image">
 					<span>Lorem ipsum dolor sit amet.</span>
 				</div>
 				<div>
@@ -64,7 +64,7 @@
 			</div>
 			<div id="footer">
 				<div>
-					<a href="index.html"><img src="images/logo2.png" alt="Image"></a>
+					<a href="index.html"><img src="../static/images/logo2.png" alt="Image"></a>
 					<p class="footnote">
 						&copy; Yay&#33;Koffee 2011.<br>All Rights Reserved.
 					</p>
