--- a/coffeewebsitetemplate/templates/index.html
+++ b/coffeewebsitetemplate/templates/index.html
@@ -4,19 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yay&#39;Koffee Website Template</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 	<div id="page">
 		<div>
 			<div id="header">
-				<a href="index.html"><img src="images/logo.png" alt="Image"></a>
+				<a href="index.html"><img src="../static/images/logo.png" alt="Image"></a>
 				<ul>
 					<li class="current">
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="menu.html">Menu</a>
+						<a href="{{ url_for('menu') }}">Menu</a>
 					</li>
 					<li>
 						<a href="locations.html">Locations</a>
@@ -31,21 +31,21 @@
 			</div>
 			<div id="body">
 				<div id="figure">
-					<img src="images/headline-home.jpg" alt="Image">
+					<img src="../static/images/headline-home.jpg" alt="Image">
 					<span id="home">Maecenas pharetra hendrerit eros sed laoreet. <a href="index.html">Find out why.</a></span>
 				</div>
 				<div id="featured">
 					<span class="whatshot"><a href="menu.html">Find out more</a></span>
 					<div>
-						<a href="menu.html"><img src="images/coffee1.jpg" alt="Image"></a>
-						<a href="menu.html"><img src="images/coffee2.jpg" alt="Image"></a>
-						<a href="menu.html"><img src="images/coffee3.jpg" alt="Image"></a>
+						<a href="menu.html"><img src="../static/images/coffee1.jpg" alt="Image"></a>
+						<a href="menu.html"><img src="../static/images/coffee2.jpg" alt="Image"></a>
+						<a href="menu.html"><img src="../static/images/coffee3.jpg" alt="Image"></a>
 					</div>
 				</div>
 				<div class="section">
 					<ul>
 						<li>
-							<a href="blog.html"><img src="images/coffee-ingredients.jpg" alt="Image"></a>
+							<a href="blog.html"><img src="../static/images/coffee-ingredients.jpg" alt="Image"></a>
 							<h2><a href="blog.html">Lorem ipsum</a></h2>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in tellus id eros iaculis porttitor eget ultrices mauris. Nulla sodales congue ante, id
@@ -53,7 +53,7 @@
 							<a href="blog.html" class="readmore">Read More</a>
 						</li>
 						<li>
-							<a href="blog.html"><img src="images/black-coffee.jpg" alt="Image"></a>
+							<a href="blog.html"><img src="../static/images/black-coffee.jpg" alt="Image"></a>
 							<h2><a href="blog.html">Dolor sit amet</a></h2>
 							<p>
 								Nulla sodales congue ante, id fermentum mi tincidunt ac. Sed eu vestibulum nisl. Maecenas pharetra hendrerit eros sed laoreet. Maecenas malesuada
@@ -61,7 +61,7 @@
 							<a href="blog.html" class="readmore">Read More</a>
 						</li>
 						<li>
-							<a href="blog.html"><img src="images/chocolate.jpg" alt="Image"></a>
+							<a href="blog.html"><img src="../static/images/chocolate.jpg" alt="Image"></a>
 							<h2><a href="blog.html">Nullam quis</a></h2>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in tellus id eros iaculis porttitor eget ultrices mauris. Nulla sodales congue ante, id
@@ -93,7 +93,7 @@
 			</div>
 			<div id="footer">
 				<div>
-					<a href="index.html"><img src="images/logo2.png" alt="Image"></a>
+					<a href="index.html"><img src="../static/images/logo2.png" alt="Image"></a>
 					<p class="footnote">
 						&copy; Yay&#33;Koffee 2011.<br>All Rights Reserved.
 					</p>
