--- a/coffeewebsitetemplate/templates/menu.html
+++ b/coffeewebsitetemplate/templates/menu.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Menu - Yay&#33;Koffee Website Template</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 	<div id="page">
 		<div>
 			<div id="header">
-				<a href="index.html"><img src="images/logo.png" alt="Image"></a>
+				<a href="index.html"><img src="../static/images/logo.png" alt="Image"></a
 				<ul>
 					<li>
 						<a href="index.html">Home</a>
@@ -31,7 +31,7 @@
 			</div>
 			<div id="body">
 				<div id="figure">
-					<img src="images/headline-menu.jpg" alt="Image">
+					<img src="../static/images/headline-menu.jpg" alt="Image">
 					<span>Lorem ipsum dolor sit amet.</span>
 				</div>
 				<div>
@@ -39,7 +39,7 @@
 					<div>
 						<ul>
 							<li>
-								<a href="index.html"><img src="images/coffee1.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee1.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Lorem ipsum</a>
 									<p>
@@ -48,7 +48,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee2.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee2.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Dolor sit amet</a>
 									<p>
@@ -57,7 +57,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee3.jpg" alt="Image"></a>
+								<a href="../static/index.html"><img src="../static/images/coffee3.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Donie quis</a>
 									<p>
@@ -66,7 +66,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee4.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee4.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Lorem ipsum</a>
 									<p>
@@ -75,7 +75,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee5.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee5.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Dolor sit amet</a>
 									<p>
@@ -84,7 +84,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee6.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee6.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Donie quis</a>
 									<p>
@@ -93,7 +93,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee3.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee3.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Lorem ipsum</a>
 									<p>
@@ -102,7 +102,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee2.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee2.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Dolor sit amet</a>
 									<p>
@@ -111,7 +111,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="index.html"><img src="images/coffee1.jpg" alt="Image"></a>
+								<a href="index.html"><img src="../static/images/coffee1.jpg" alt="Image"></a>
 								<div>
 									<a href="index.html">Donie quis</a>
 									<p>
@@ -125,7 +125,7 @@
 			</div>
 			<div id="footer">
 				<div>
-					<a href="index.html"><img src="images/logo2.png" alt="Image"></a>
+					<a href="index.html"><img src="../static/images/logo2.png" alt="Image"></a>
 					<p class="footnote">
 						&copy; Yay&#33;Koffee 2011.<br>All Rights Reserved.
 					</p>
