--- a/coffeewebsitetemplate/templates/index.html
+++ b/coffeewebsitetemplate/templates/index.html
@@ -10,22 +10,19 @@
 	<div id="page">
 		<div>
 			<div id="header">
-				<a href="index.html"><img src="../static/images/logo.png" alt="Image"></a>
+				<a href="{{ url_for('index') }}"><img src="../static/images/logo.png" alt="Image"></a>
 				<ul>
 					<li class="current">
-						<a href="index.html">Home</a>
+						<a href="{{ url_for('index') }}">Home</a>
 					</li>
 					<li>
 						<a href="{{ url_for('menu') }}">Menu</a>
 					</li>
 					<li>
-						<a href="locations.html">Locations</a>
+						<a href="{{ url_for('about') }}">About Us</a>
 					</li>
 					<li>
-						<a href="blog.html">Blog</a>
-					</li>
-					<li>
-						<a href="about.html">About Us</a>
+						<a href="{{ url_for('login') }}">Login</a>
 					</li>
 				</ul>
 			</div>
