--- a/coffeewebsitetemplate/templates/about.html
+++ b/coffeewebsitetemplate/templates/about.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>About - Coffee Website Template</title>
+	<title>About - YAY COFFEE!</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 	<div id="page">
 		<div>
 			<div id="header">
-				<a href="{{ url_for('index') }}"><img src="../static/images/logo.png" alt="Image"></a>
+				<a href="{{ url_for('index') }}"><img src="../static/images/logo.png" alt="YAY COFFEE! Logo"></a>
 				<ul>
 					<li class="current">
 						<a href="{{ url_for('index') }}">Home</a>
@@ -28,42 +27,39 @@
 			</div>
 			<div id="body">
 				<div id="figure">
-					<img src="../static/images/headline-about.jpg" alt="Image">
-					<span>Lorem ipsum dolor sit amet.</span>
+					<img src="../static/images/headline-about.jpg" alt="About YAY COFFEE!">
+					<span>Crafting the perfect cup, one bean at a time.</span>
 				</div>
 				<div>
 					<a href="about.html" class="about">About</a>
 					<div>
-						<h3>We Have Free Templates for Everyone</h3>
+						<h3>Welcome to YAY COFFEE!</h3>
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What's more, they're absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/termsofuse/">Terms of Use</a>. You can even remove all our links if you want to.
+							At YAY COFFEE!, we believe in serving only the finest coffee, responsibly sourced and roasted to perfection. Located in the heart of Tel Aviv, our cozy spot is perfect for relaxing, working, or catching up with friends over a delicious cup of coffee.
 						</p>
-						<h3>We Have More Templates for You</h3>
+						<h3>Our Passion for Coffee</h3>
 						<p>
-							Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> and find what you're looking for. But if you don't find any website template you can use, you can try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. Maybe you're looking for something different, something special. And we love the challenge of doing something different and something special.
+							Every cup we serve at YAY COFFEE! reflects our commitment to quality. Whether you're enjoying a classic espresso or one of our unique blends, we want your experience to be exceptional every time.
 						</p>
-						<h3>Be Part of Our Community</h3>
+						<h3>Join Our Community</h3>
 						<p>
-							If you're experiencing issues and concerns about this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests with you.
+							We’re more than just a coffee shop – we’re a community hub. Follow us on social media to stay updated on our latest offerings, events, and promotions. We'd love to connect with you and hear your feedback.
 						</p>
-						<h3>Template Details</h3>
+						<h3>Visit Us</h3>
 						<p>
-							Design version 3<br>Code version 2
-						</p>
-						<p>
-							Website Template details, discussion and updates for this <a href="http://www.freewebsitetemplates.com/discuss/coffeewebsitetemplate/">Coffee Website Template</a>.<br>Website Template design by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>.
+							You can find us at 2 HaYarkon Street, Tel Aviv. YAY COFFEE! is your neighborhood spot for great coffee, a warm ambiance, and friendly service. We look forward to welcoming you!
 						</p>
 						<p>
-							Please feel free to remove some or all the text and links of this page and replace it with your own About content.
+							If you have any questions or special requests, don't hesitate to reach out. We're here to serve you!
 						</p>
 					</div>
 				</div>
 			</div>
 			<div id="footer">
 				<div>
-					<a href="index.html"><img src="../static/images/logo2.png" alt="Image"></a>
+					<a href="index.html"><img src="../static/images/logo2.png" alt="YAY COFFEE! Logo"></a>
 					<p class="footnote">
-						&copy; Yay&#33;Koffee 2011.<br>All Rights Reserved.
+						&copy; YAY COFFEE! 2024.<br>All Rights Reserved.
 					</p>
 				</div>
 				<div class="section">
@@ -85,13 +81,12 @@
 						</li>
 					</ul>
 					<div id="connect">
-						<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" id="facebook">Facebook</a>
-						<a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" id="twitter">Twitter</a>
-						<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" id="googleplus">Google+</a>
-						<a href="index.html" id="rss">RSS</a>
+						<a href="https://www.facebook.com/YAYCOFFEE" target="_blank" id="facebook">Facebook</a>
+						<a href="https://www.twitter.com/YAYCOFFEE" target="_blank" id="twitter">Twitter</a>
+						<a href="https://www.instagram.com/YAYCOFFEE" target="_blank" id="instagram">Instagram</a>
 					</div>
 					<p>
-						This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you&#39;re free to use this website template without linking back to us. If you&#39;re having problems editing this website template, then don&#39;t hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
+						YAY COFFEE! was created with a passion for quality coffee and a commitment to our community. We invite you to experience our warm hospitality and exceptional brews. If you need any help, don't hesitate to reach out to us.
 					</p>
 				</div>
 			</div>
