--- a/coffeewebsitetemplate/templates/admin.html
+++ b/coffeewebsitetemplate/templates/admin.html
@@ -1,168 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>COFFEE YAY! - Admin Login</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <style>
-        /* Centering the form on the screen */
-        .login-form {
-            width: 250px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-            box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            display: block;
-            font-size: 16px;
-            margin-bottom: 4px;
-            color: #333;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #fff;
-            color: #333;
-            box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
-        }
-
-        .form-group input:focus {
-            box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.2);
-            outline: none;
-            border-color: #555;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 12px;
-            background-color: #333;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            font-size: 16px;
-        }
-
-        .btn:hover {
-            background-color: #555;
-        }
-
-        #content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 70vh;
-        }
-
-        #footer {
-            background-color: #333;
-            color: white;
-            padding: 15px 0;
-            text-align: center;
-        }
-
-        #footer .section ul {
-            list-style-type: none;
-            padding: 0;
-            font-size: 14px;
-        }
-
-        #footer .section ul li {
-            display: inline;
-            margin: 0 5px;
-        }
-
-        #footer .section ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        #footer .section ul li.current a {
-            font-weight: bold;
-        }
-
-        #footer #connect a {
-            color: white;
-            text-decoration: none;
-            margin: 0 3px;
-            font-size: 14px;
-        }
-
-        #footer #connect a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YAY COFFEE! - Admin</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/admin.css">
 </head>
 <body>
     <div id="page">
-        <div>
-            <div id="header">
-                <a href="{{ url_for('index') }}"><img src="../static/images/logo.png" alt="COFFEE YAY! Logo"></a>
+        <div id="header">
+            <a href="{{ url_for('index') }}"><img src="../static/images/logo.png" alt="YAY COFFEE! Logo"></a>
+            <ul>
+                <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a href="{{ url_for('menu') }}">Menu</a></li>
+                <li><a href="{{ url_for('about') }}">About Us</a></li>
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li class="current"><a href="{{ url_for('admin') }}">Admin</a></li>
+            </ul>
+        </div>
+        <div id="body">
+            <div id="content">
+                <div class="admin-form">
+                    <h2>Admin - Add Menu Item</h2>
+                    <form action="/admin/add-item" method="POST">
+                        <div class="form-group">
+                            <label for="item-name">Item Name:</label>
+                            <input type="text" id="item-name" name="item_name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="item-description">Item Description:</label>
+                            <textarea id="item-description" name="item_description" rows="4" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="item-price">Item Price:</label>
+                            <input type="number" id="item-price" name="item_price" step="0.01" required>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn">Add Item</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <div>
+                <a href="{{ url_for('index') }}"><img src="../static/images/logo2.png" alt="YAY COFFEE! Logo"></a>
+                <p class="footnote">
+                    &copy; YAY COFFEE! 2024.<br>All Rights Reserved.
+                </p>
+            </div>
+            <div class="section">
                 <ul>
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('menu') }}">Menu</a></li>
-                    <li><a href="{{ url_for('about') }}">About Us</a></li>
-                    <li class="current"><a href="{{ url_for('admin_login') }}">Admin Login</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="locations.html">Locations</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li class="current"><a href="admin.html">Admin</a></li>
                 </ul>
-            </div>
-            <div id="body">
-                <div id="content">
-                    <div class="login-form">
-                        <form action="/admin_login" method="POST">
-                            <div class="form-group">
-                                <label for="username">Username:</label>
-                                <input type="text" id="username" name="username" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password:</label>
-                                <input type="password" id="password" name="password" required>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn">Login</button>
-                            </div>
-                        </form>
-                    </div>
+                <div id="connect">
+                    <a href="https://www.facebook.com/YAYCOFFEE" target="_blank" id="facebook">Facebook</a>
+                    <a href="https://www.twitter.com/YAYCOFFEE" target="_blank" id="twitter">Twitter</a>
+                    <a href="https://www.instagram.com/YAYCOFFEE" target="_blank" id="instagram">Instagram</a>
                 </div>
-            </div>
-            <div id="footer">
-                <div>
-                    <a href="index.html"><img src="../static/images/logo2.png" alt="COFFEE YAY! Logo"></a>
-                    <p class="footnote">
-                        &copy; COFFEE YAY! 2024.<br>All Rights Reserved.
-                    </p>
-                </div>
-                <div class="section">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-                        <li><a href="locations.html">Locations</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li class="current"><a href="about.html">About Us</a></li>
-                    </ul>
-                    <div id="connect">
-                        <a href="https://www.facebook.com/COFFEEYAY" target="_blank" id="facebook">Facebook</a>
-                        <a href="https://www.twitter.com/COFFEEYAY" target="_blank" id="twitter">Twitter</a>
-                        <a href="https://www.instagram.com/COFFEEYAY" target="_blank" id="instagram">Instagram</a>
-                    </div>
-                    <p>
-                        COFFEE YAY! was created with a passion for quality coffee and a commitment to our community. We invite you to experience our warm hospitality and exceptional brews. If you need any help, don't hesitate to reach out to us.
-                    </p>
-                </div>
+                <p>
+                    Admin area for adding new menu items. Please ensure all information is correct before submitting.
+                </p>
             </div>
         </div>
     </div>
