--- a/coffeewebsitetemplate/static/css/style.css
+++ b/coffeewebsitetemplate/static/css/style.css
@@ -696,6 +696,7 @@ p a:hover {
     font-family: 'open_sansregular';
     font-size: 14px;
     color: #3c200b;
+	
 }
 
 .login-form input {
@@ -732,6 +733,7 @@ p a:hover {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
+	transform: translateX(20%);
 }
 
 .form-group {
@@ -781,10 +783,10 @@ p a:hover {
 }
 
 #content {
-    display: flex;
+    display: auto;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    height: auto;
 }
 
 #footer {
@@ -828,16 +830,19 @@ p a:hover {
 /* Style for admin page */
 .admin-form {
     width: 300px;
-    margin: 0 auto;
+    margin: auto;
+	margin-right: 10%;
     padding: 20px;
     background-color: #f9f9f9;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
+	transform: translateX(20%);
 }
 
 .admin-form h2 {
     margin-bottom: 20px;
+
     color: #333;
 }
 
@@ -887,4 +892,67 @@ p a:hover {
 
 .btn:hover {
     background-color: #555;
+}
+
+#footer {
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 30px;
+}
+
+#footer .footnote {
+    font-size: 14px;
+    color: #999;
+}
+
+#footer .section {
+    margin-top: 20px;
+}
+
+#footer .section ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer .section ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+#footer .section ul li a {
+    color: #FFD700;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+#footer #connect a {
+    display: inline-block;
+    margin: 0 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+}
+
+#footer #connect a:hover {
+    color: #FFD700;
+}
+
+
+
+
+.admin-page #page div {
+    background: none;
+    padding: initial;
+    width: auto;
+}
+
+
+/* הסטייל לדף ה-admin */
+#admin-page div {
+    background: none;
+    padding: 0;
+    width: 940px; /* אם נדרש, הוסף כאן את הגובה */
 }
